update 4 user pages

--- a/views/user/index.erb
+++ b/views/user/index.erb
@@ -34,33 +34,23 @@
             <% @items.each do |item| %>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100 ">
-                        <% if item['item_photo'] && !item['item_photo'].empty? %>
-                            <img src="/uploads/items/<%= item['item_photo'] %>" class="card-img-top" alt="<%= item['item_name'] %>">
-                        <% else %>
-                            <img src="/img/question.png" class="card-img-top" alt="Default Item">
-                        <% end %>
-                        <div class="card-body">
-                            <p class="card-text">
-                                <%= item['item_name'] %>
-                            </p>
-                            <p class="card-text">
-                                <strong>Brand:</strong> <%= item['item_brand'] %>
-                            </p>
-                            <p class="card-text">
-                                <strong>Price:</strong> <%= rupiah_currency(item['item_price']) %>
-                            </p>
-                            <p class="card-text">
-                                <strong>Stock:</strong> <%= item['item_stock'] %>
-                            </p>
-                            <p class="card-text">
-                                <strong>Category:</strong> <%= item['item_category'] %>
-                            </p>
-                            <p class="catd-text">
-                                <strong>Unit:</strong> <%= item['item_unit'] %>
-                            </p>
-                            <a href="/view_detail_item/<%= item['item_id'] %>" class="btn btn-outline-secondary float-start">Detail</a>
-                            <a href="#" class="btn btn-primary float-end">Checkout</a>
-                        </div>
+                        <a href="/view_detail_item/<%= item['item_id'] %>" class="text-decoration-none text-dark">
+                            <% if item['item_photo'] && !item['item_photo'].empty? %>
+                                <img src="/uploads/items/<%= item['item_photo'] %>" class="card-img-top" alt="<%= item['item_name'] %>">
+                            <% else %>
+                                <img src="/img/question.png" class="card-img-top" alt="Default Item">
+                            <% end %>
+                            <div class="card-body">
+                                <p class="card-text">
+                                    <%= item['item_name'] %>
+                                </p>
+                                <p class="card-text">
+                                    <strong>
+                                        <%= rupiah_currency(item['item_price']) %>
+                                    </strong>
+                                </p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             <% end %>
