--- a/views/user/items/view_item_no_user.erb
+++ b/views/user/items/view_item_no_user.erb
@@ -15,8 +15,8 @@
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">
                                     <p class="card-text">
-                                        <%= @item['item_name'] %>
-                                    </p>   
+                                        <h4><b><%= @item['item_name'] %></b></h4>    
+                                    </p>
                                 </li>
                                 <li class="list-group-item">
                                     <p class="card-text">
