--- a/views/user/items/view_item.erb
+++ b/views/user/items/view_item.erb
@@ -15,7 +15,7 @@
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">
                                     <p class="card-text">
-                                        <%= @item['item_name'] %>
+                                        <h4><b><%= @item['item_name'] %></b></h4>    
                                     </p>
                                 </li>
                                 <li class="list-group-item">
