--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -30,8 +30,14 @@
                     </a>
                     <a class="nav-link" href="/seller_item_lists">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-warehouse"></i></div>
-                        Seller Items Lists
+                        Seller Item Lists
                     </a>
+
+                    <a class="nav-link" href="/services">
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-truck"></i></div>
+                        Delivery
+                    </a>                    
+
                     <a class="nav-link" href="#">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-sitemap"></i></div>
                         Seller Transaction Lists
