update service_lists & add_service pages

--- a/views/admin/services/service_lists.erb
+++ b/views/admin/services/service_lists.erb
@@ -7,7 +7,7 @@
         <div class="card-header">
             <i class="fas fa-solid fa-truck me-1"></i>
             Service Lists
-            <a href="/add_an_item/<%= current_user['user_id'] %>" class="btn btn-sm btn-success float-end">Add An Item</a>
+            <a href="/add_a_service" class="btn btn-sm btn-success float-end">Add An Item</a>
         </div>
         <div class="card-body">
             <% if session[:success] %>
