--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -33,7 +33,7 @@
                         Seller Item Lists
                     </a>
 
-                    <a class="nav-link" href="/services">
+                    <a class="nav-link" href="/service_lists">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-truck"></i></div>
                         Delivery
                     </a>                    
