update edit_service page & edit_a_service function

--- a/views/admin/services/service_lists.erb
+++ b/views/admin/services/service_lists.erb
@@ -42,7 +42,7 @@
                                     <div class="btn-group btn-group-sm" role="group" aria-label="Button Group">
                                         <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal" ><i class="fa-solid fa-trash"></i></button>
                                         <a href="#" class="btn btn-info text-white"><i class="fa-solid fa-eye"></i></a>
-                                        <a href="#" class="btn btn-primary"><i class="fa-solid fa-edit"></i></a>
+                                        <a href="/edit_a_service/<%= service['service_id'] %>" class="btn btn-primary"><i class="fa-solid fa-edit"></i></a>
                                     </div>
 
                                     <!-- Modal -->
