--- a/views/admin/services/service_lists.erb
+++ b/views/admin/services/service_lists.erb
@@ -40,25 +40,25 @@
                                 <td><%= rupiah_currency(service['fee']) %></td>
                                 <td>
                                     <div class="btn-group btn-group-sm" role="group" aria-label="Button Group">
-                                        <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal" ><i class="fa-solid fa-trash"></i></button>
+                                        <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= service['service_id'] %>" ><i class="fa-solid fa-trash"></i></button>
                                         <a href="#" class="btn btn-info text-white"><i class="fa-solid fa-eye"></i></a>
                                         <a href="/edit_a_service/<%= service['service_id'] %>" class="btn btn-primary"><i class="fa-solid fa-edit"></i></a>
                                     </div>
 
                                     <!-- Modal -->
-                                    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                                    <div class="modal fade" id="deleteModal<%= service['service_id'] %>" tabindex="-1" aria-labelledby="deleteModalLabel<%= service['service_id'] %>" aria-hidden="true">
                                         <div class="modal-dialog">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h3 class="modal-title fs-5" id="deleteModalLabel">Confirm Deletion</h3>
+                                                    <h3 class="modal-title fs-5" id="deleteModalLabel<%= service['service_id'] %>">Confirm Deletion</h3>
                                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    Are you sure want to delete this Item ?
+                                                    Are you sure want to delete this Service ?
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                    <form action="#" method="POST">
+                                                    <form action="/delete_a_service/<%= service['service_id'] %>" method="POST">
                                                         <button type="submit" class="btn btn-primary">Delete</button>
                                                     </form>
                                                 </div>
