--- a/views/admin/user_dashboard/user_lists.erb
+++ b/views/admin/user_dashboard/user_lists.erb
@@ -84,13 +84,13 @@
                         <td>
                             <div class="btn-group btn-group-sm" role="group" aria-label="Button Group">
                                 <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= user['user_id']%>"><i class="fa-solid fa-trash"></i></button>
-                                <a href="/detail_user/<%= user['user_id']%>" class="btn btn-info text-white"><i class="fa-solid fa-eye"></i></a>
+                                <button class="btn btn-info text-white" data-bs-toggle="modal" data-bs-target="#detailModal<%= user['user_id'] %>" ><i class="fa-solid fa-eye"></i></button>
                                 <a href="/edit_user/<%= user['user_id']%>" class="btn btn-primary"><i class="fa-solid fa-edit"></i></a>
                             </div>
                         </td>
                     </tr>
 
-                    <!-- Modal -->
+                    <!-- Delete Modal -->
                     <div class="modal fade" id="deleteModal<%= user['user_id'] %>" tabindex="-1" aria-labelledby="deleteModalLabel<%= user['user_id'] %>" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
@@ -106,6 +106,29 @@
                                     <form action="/delete_user/<%= user['user_id'] %>" method="POST">
                                         <button type="submit" class="btn btn-primary">Delete</button>
                                     </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Detail Modal -->
+                    <div class="modal fade" id="detailModal<%= user['user_id'] %>" tabindex="-1" aria-labelledby="detailModalLabel<%= user['user_id'] %>" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h3 class="modal-title fs-5" id="detailModalLabel<%= user['user_id']%>">View Detail</h3>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="mb-3 row">
+                                        <label for="#" class="col-sm-2 col-form-label">Name</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" readonly class="form-control-plaintext" id="#" value="<%= user['name']%>">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                 </div>
                             </div>
                         </div>
