--- a/views/admin/user_dashboard/user_lists.erb
+++ b/views/admin/user_dashboard/user_lists.erb
@@ -121,9 +121,55 @@
                                 </div>
                                 <div class="modal-body">
                                     <div class="mb-3 row">
-                                        <label for="#" class="col-sm-2 col-form-label">Name</label>
-                                        <div class="col-sm-10">
-                                            <input type="text" readonly class="form-control-plaintext" id="#" value="<%= user['name']%>">
+                                        <label for="name" class="col-sm-3 col-form-label">Name</label>
+                                        <div class="col-sm-9">
+                                            <input type="text" readonly class="form-control-plaintext" id="name" value="<%= user['name']%>">
+                                        </div>
+                                    </div>
+                                    <div class="mb-3 row">
+                                        <label for="username" class="col-sm-3 col-form-label">Username</label>
+                                        <div class="col-sm-9">
+                                            <input type="text" readonly class="form-control-plaintext" id="username" value="<%= user['username']%>">
+                                        </div>
+                                    </div>
+                                    <div class="mb-3 row">
+                                        <label for="email" class="col-sm-3 col-form-label">Email</label>
+                                        <div class="col-sm-9">
+                                            <input type="text" readonly class="form-control-plaintext" id="email" value="<%= user['email']%>">
+                                        </div>
+                                    </div>
+                                    <div class="mb-3 row">
+                                        <label for="birthdate" class="col-sm-3 col-form-label">Birthdate</label>
+                                        <div class="col-sm-9">
+                                            <input type="text" readonly class="form-control-plaintext" id="birthdate" value="<%= formatted_birthdate %>">
+                                        </div>
+                                    </div>
+                                    <div class="mb-3 row">
+                                        <label for="address" class="col-sm-3 col-form-label">Address</label>
+                                        <div class="col-sm-9">
+                                            <input type="text" readonly class="form-control-plaintext" id="address" value="<%= user['address']%>">
+                                        </div>
+                                    </div>
+                                    <div class="mb-3 row">
+                                        <label for="phone" class="col-sm-3 col-form-label">Phone</label>
+                                        <div class="col-sm-9">
+                                            <input type="text" readonly class="form-control-plaintext" id="phone" value="<%= user['phone']%>">
+                                        </div>
+                                    </div>
+                                    <div class="mb-3 row">
+                                        <label for="photo" class="col-sm-3 col-form-label">Photo</label>
+                                        <div class="col-sm-9">
+                                            <% if user['photo'] %>
+                                                <img src="/uploads/users/<%= user['photo']%>" alt="<%= user['username']%>" style="max-width: 100px" id="photo" />
+                                            <% else %>
+                                                <p>No Photo Available</p>
+                                            <% end %>
+                                        </div>
+                                    </div>
+                                    <div class="mb-3 row">
+                                        <label for="access" class="col-sm-3 col-form-label">Access</label>
+                                        <div class="col-sm-9">
+                                            <input type="text" readonly class="form-control-plaintext" id="access" value="<%= user['access']%>">
                                         </div>
                                     </div>
                                 </div>
